# VOPAY

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.anchor.json
examples/: frontend-integration.tsx
programs/vopay/: Cargo.toml
programs/vopay/src/: errors.rs  lib.rs
programs/vopay/src/instructions/: execute_transfer.rs  log_metadata.rs  mod.rs  verify_contact.rs
programs/vopay/src/state/: contact_registry.rs  mod.rs  transaction_log.rs
src/: App.tsx  vite-env.d.ts
src/components/: Footer.tsx  Navigation.tsx
src/context/: BalanceSynchronizer.tsx  store.ts
src/hooks/: useBalance.ts
src/idl/: vopay.json
src/lib/: executeTransfer.ts  solanaUtils.ts  vopayProgram.ts
src/pages/: ConfirmationGatePage.tsx  DashboardPage.tsx  HistoryPage.tsx  LandingPage.tsx  SuccessPage.tsx  TransactionAssistantPage.tsx
tests/: vopay.ts
